--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,12 +6,10 @@
     <title>Mybrary</title>
 </head>
 <body>
-    Before
-    <br>
-    <br>
+    
+    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/errorMessage.ejs') %>
     <%- body %>
-    <br>
-    <br>
-    After
+    
 </body>
 </html>
